# phyphox_m_firmware

./: CMakeLists.txt  README.md  prj.conf
boards/arm/phyphox-newton/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  phyphox-newton.overlay  phyphox_newton.dts  phyphox_newton.yaml  phyphox_newton_defconfig
boards/arm/phyphox-ruler/: Kconfig.board  Kconfig.defconfig  phyphox_ruler.dts  phyphox_ruler.yaml  phyphox_ruler_defconfig
boards/arm/phyphox_satellite/: Kconfig.board  Kconfig.defconfig  phyphox_satellite.dts  phyphox_satellite.yaml  phyphox_satellite_defconfig
src/: VL53L4CD_api.c  VL53L4CD_calibration.c  VL53L4CD_calibration.h  bas.c  bas.h  ble.c  ble.h  bmi3.c  bmi3.h  bmi323.c  bmi323.h  bmiZephyr.c  bmiZephyr.h  bmp5.c  bmpZephyr.c  bmpZephyr.h  event.c  event.h  i2c_zephyr.c  i2c_zephyr.h  leds.c  leds.h  main.c  mlx90392.c  mlx90392.h  mlx90393.c  mlx90393.h  mlxZephyr.c  mlxZephyr.h  phyphox-newton.code-workspace  platform.c  platform.h  sensors.h  shtc3.c  shtc3.h  tof.c  tof.h  veml6030.c  veml6030.h
